# minecraft

./: .gitignore  CMakeLists.txt  README.md  TODO.MD
images/: moon.xcf  sun.xcf  texture.xcf
scripts/: analyze-memory-usage.sh  build-and-debug-world-heights.sh  build-and-debug.sh  build-debug.sh
shaders/: basic_fs.glsl  basic_vs.glsl  celestial_fs.glsl  celestial_vs.glsl  clouds_fs.glsl  line_fs.glsl  line_vs.glsl  sky_fs.glsl  sky_vs.glsl
src/: block.hpp  camera.hpp  color.hpp  common.hpp  constants.cpp  constants.hpp  image.cpp  image.hpp  logger.hpp  main.cpp  noise.hpp  shaders.cpp  shaders.hpp  skybox.hpp  texture.cpp  texture.hpp  util.cpp  util.hpp  world.cpp  world.hpp
src/platform/: platform.hpp
